--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
-    "name": "clgui/music-lesson-tracker-mvc-framework",
-    "authors": [
-        {
-            "name": "Charles Loehle",
-            "email": "clguitar1@gmail.com"
-        }
-    ],
-    "require": {}
+	"name": "clgui/music-lesson-tracker-mvc-framework",
+	"authors": [
+		{
+			"name": "Charles Loehle",
+			"email": "clguitar1@gmail.com"
+		}
+	],
+	"require": {},
+	"autoload": {
+		"psr-4": {
+			"app\\": "./"
+		}
+	}
 }
